@@ -33,5 +33,6 @@ GE_INTERNAL ClearlooksStepper clearlooks_scrollbar_visible_steppers    (GtkWidge
 GE_INTERNAL ClearlooksJunction clearlooks_scrollbar_get_junction       (GtkWidget    *widget);
 
 GE_INTERNAL void clearlooks_set_toolbar_parameters (ToolbarParameters *toolbar, GtkWidget *widget, GdkWindow *window, gint x, gint y);
+GE_INTERNAL void clearlooks_get_notebook_tab_position (GtkWidget *widget, gboolean *start, gboolean *end);
 
 #endif /* SUPPORT_H */
