@@ -1,3 +1,12 @@
+2007-09-09  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_box_gap):
+	* engines/clearlooks/src/support.c:
+	(clearlooks_get_notebook_tab_position):
+	* engines/clearlooks/src/support.h:
+	Added a smarter heuristic to mark notebook box edges as not rounded.
+
 2007-09-09  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* engines/clearlooks/src/clearlooks_draw_gummy.c:
